...
class _AboutSectionState extends ConsumerState<AboutSection> {
  bool _showTechInfo = false;

  @override
  Widget build(BuildContext context) {
    return EnpixSection(
      header: '关于',
      children: [
        FutureBuilder<PackageInfo>(
          future: PackageInfo.fromPlatform(),
          builder: (context, snap) => _infoTile(
            '版本',
            snap.data?.version ?? '-',
...
